Add get, post, put, delete api's for customer
